# cppflow

./: CMakeLists.txt
examples/efficientnet/: create_model.py
include/cppflow/: model.h
